Remove old about page and add locations map

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,164 +5,114 @@ title: About us
 header_image: private/about.jpg
 ---
 
-
-<section class="about">
-
-  <h2 class="section__title" id="about">Who we are</h2>
-
-  <div class="card">
-
-    <p class="card__body">As a team of software developers, designers, UX experts, technical writers and scrum masters we are a group of creative minds that strives to provide our customers with a great online shop software.</p>
-
-    <p class="card__body">Our developer portal is a platform from developers for developers, and comprises a combination of REST API documentation for our products, blog posts with topics from our tech stack, as well as job vacancies.</p>
-
-    <a href="/devjobs/" class="cta  cta--beyond" onClick="ga('send', 'event', 'Jobs', 'click', 'Become an ePages dev');">Become an ePages dev ›</a>
-
-  </div>
-
+<section class="locations">
+  <div id="map" class="locations__map"></div>
+  <div class="locations__text"></div>
 </section>
 
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
+  type="text/javascript"></script>
 
+<script type="text/javascript">
 
+  var locations = [
+    {
+      name: 'Barcelona',
+      position: new google.maps.LatLng(41.390205, 2.154007),
+      type: 'office'
+    },
+    {
+      name: 'Jena',
+      position: new google.maps.LatLng(50.929823, 11.596630),
+      type: 'office'
+    },
+    {
+      name: 'Hamburg',
+      position: new google.maps.LatLng(53.557145, 9.958720),
+      type: 'office'
+    },
+    {
+      name: 'Bilbao',
+      position: new google.maps.LatLng(43.264634, -2.936826),
+      type: 'remote'
+    }
+  ];
 
+  var descriptions = {
+    'Barcelona': '<div class="tooltip">' +
+                   '<div class="tooltip__image tooltip__image--barcelona"></div>' +
+                   '<div class="tooltip__text">' +
+                     '<h4>Barcelona</h4>' +
+                     '<p>ePages Southern Europe S.L.</p>' +
+                     '<p>Diagonal 435, 5º - 1ª</p>' +
+                     '<p>08036 Barcelona</p>' +
+                   '</div>' +
+                 '</div>',
+    'Jena': '<div class="tooltip">' +
+              '<div class="tooltip__image tooltip__image--jena"></div>' +
+              '<div class="tooltip__text">' +
+                '<h4>Jena</h4>' +
+                '<p>ePages GmbH</p>' +
+                '<p>Heinrich-Heine-Straße 1</p>' +
+                '<p>07743 Jena</p>' +
+              '</div>' +
+            '</div>',
+    'Hamburg': '<div class="tooltip">' +
+                '<div class="tooltip__image tooltip__image--hamburg"></div>' +
+                '<div class="tooltip__text">' +
+                  '<h4>Hamburg</h4>' +
+                  '<p>ePages GmbH</p>' +
+                  '<p>Pilatuspool 2</p>' +
+                  '<p>20355 Hamburg</p>' +
+                '</div>' +
+              '</div>',
+    'Bilbao': '<div class="tooltip">' +
+                '<div class="tooltip__image tooltip__image--bilbao"></div>' +
+                '<div class="tooltip__text">' +
+                  '<h4>Bilbao</h4>' +
+                  '<p>ePages Southern Europe S.L.</p>' +
+                  '<p>Remote work</p>' +
+                '</div>' +
+              '</div>',
+  };
 
-<section class="channels">
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 4,
+    center: new google.maps.LatLng(50.718216, 4.532518),
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    zoomControl: false,
+    fullscreenControl: false,
+    streetViewControl: false,
+    mapTypeControl: false
+  });
 
-  <h2 class="section__title" id="channels">Our channels</h2>
+  var infowindow = new google.maps.InfoWindow();
 
-  <div class="card">
+  var marker, i;
 
-    <ul>
-      <li>
-        <a href="https://twitter.com/{{site.twitter_username}}" target="_blank" onClick="ga('send', 'event', 'Channels', 'click', 'Twitter');">
-          <i class="fab  fa-fw  fa-twitter  fa-2x" aria-hidden="true"></i>
-          <p>Follow us on <span>Twitter</span></p>
-        </a>
-      </li>
-      <li>
-        <a href="https://youtube.com/channel/{{site.youtube_username}}" target="_blank" onClick="ga('send', 'event', 'Channels', 'click', 'YouTube');">
-          <i class="fab  fa-fw  fa-youtube  fa-2x" aria-hidden="true"></i>
-          <p>See what we're up to on <span>YouTube</span></p>
-        </a>
-      </li>
-      <li>
-        <a href="https://epages.com" target="_blank" onClick="ga('send', 'event', 'Channels', 'click', 'Website');">
-          <i class="fas  fa-fw  fa-globe  fa-2x" aria-hidden="true"></i>
-          <p>Visit our <span>company website</span></p>
-        </a>
-      </li>
-    </ul>
+  var icons = {
+    office: {
+      url: "/assets/img/pages/about/office.svg",
+      scaledSize: new google.maps.Size(40, 40)
+    },
+    remote: {
+      url: "/assets/img/pages/about/remote.svg",
+      scaledSize: new google.maps.Size(40, 40)
+    }
+  };
 
-  </div>
+  for (i = 0; i < locations.length; i++) {
+    marker = new google.maps.Marker({
+      position: locations[i].position,
+      map: map,
+      icon: icons[locations[i].type]
+    });
 
-</section>
-
-
-
-
-
-<section class="events">
-
-  <h2 class="section__title" id="team-events">Great team - Great events!</h2>
-
-  <p class="section__body">Pictures say more than words: Take a sneak peek at some of the videos and pictures we collected from recent events.</p>
-
-  <div class="carousel  js-carousel--about">
-
-    {% for event in site.data.events %}
-
-      <div class="carousel__item">
-
-        {% if event.video %}
-
-          <a href="{{ event.video }}" style="display: block;" class="lightbox__youtube  js-lightbox__youtube">
-
-        {% else %}
-
-          <a href="/assets/img/pages/about/{{ event.image }}" style="display: block;" class="lightbox__image  js-lightbox__image">
-
-        {% endif %}
-
-          <div class="card  card--event">
-
-            {% if event.video %}
-
-              <div class="card--event__play-icon">
-                <i class="fas  fa-play" aria-hidden="true"></i>
-              </div>
-
-            {% endif %}
-
-            <div class="card--event__image" style="background-image: url('/assets/img/pages/about/{{ event.image }}');"></div>
-
-            <div class="card--event__body">
-              <h4 class="card--event__title">{{ event.title }}</h4>
-              <div class="card--event__date">{{ event.date }}</div>
-            </div>
-
-          </div>
-
-        {% if event.video or event.image %}</a>{% endif %}
-
-      </div>
-
-    {% endfor %}
-
-  </div>
-
-  <div class="carousel__paginator">
-    <div class="prev"><i class="fas  fa-3x  fa-angle-left"></i></div>
-    <div class="next"><i class="fas  fa-3x  fa-angle-right"></i></div>
-  </div>
-
-</section>
-
-
-
-
-
-<section class="exhibitions">
-
-  <h2 class="section__title" id="lets-meet">Let's meet!</h2>
-
-  <p class="section__body">We're at various conferences, meetups and job fairs throughout the year. Get in touch with us!</p>
-
-  <div class="card-container  card-container--exhibition">
-
-    {% for exhibition in site.data.exhibitions %}
-
-      <div class="card--float">
-
-        <div class="card  card--exhibition">
-
-          {% if exhibition.link %}<a target="_blank" href="{{ exhibition.link }}">{% endif %}
-
-          <div class="card--exhibition__upper">
-            <div class="card--exhibition__date">{{ exhibition.date }}{% if exhibition.time %} | {{ exhibition.time }}{% endif %}</div>
-            <div class="card--exhibition__title">{{ exhibition.title }}</div>
-          </div>
-
-          <div class="card--exhibition__lower">
-            <div class="card--exhibition__address">{{ exhibition.address }}</div>
-            <div class="card--exhibition__description">{{ exhibition.description }}</div>
-          </div>
-
-          {% if exhibition.link %}</a>{% endif %}
-
-        </div>
-
-      </div>
-
-    {% endfor %}
-
-  </div>
-
-</section>
-
-
-<link rel="stylesheet" href="/assets/slick/slick-theme.css"/>
-<link rel="stylesheet" href="/assets/slick/slick.css"/>
-<link rel="stylesheet" href="/assets/css/magnific-popup.css">
-<script src="/assets/js/jquery.magnific-popup.min.js"></script>
-<script src="/assets/slick/slick.min.js"></script>
-<script src="/assets/js/about.js"></script>
+    google.maps.event.addListener(marker, 'click', (function (marker, i) {
+      return function () {
+        infowindow.setContent(descriptions[locations[i].name]);
+        infowindow.open(map, marker);
+      }
+    })(marker, i));
+  }
+</script>
