--- a/_pages/about.html
+++ b/_pages/about.html
@@ -18,7 +18,7 @@ header_image: private/about.jpg
   <div class="locations__text"></div>
 </section>
 
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
   type="text/javascript"></script>
 
 <script type="text/javascript">
