--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,11 +13,49 @@ header_image: private/about.jpg
 
 </section>
 
+<section class="teams">
+
+  <div class="carousel js-carousel--about">
+
+    <div class="carousel__item">
+      <h4 class="teams__card-header">Frontend</h4>
+      <p class="teams__card-content">Javascript · React · Docker · Ruby · Less</p>
+    </div>
+
+    <div class="carousel__item">
+      <h4 class="teams__card-header">Backend</h4>
+      <p class="teams__card-content">Java · Kotlin · Kubernetes · Helm · Spring</p>
+    </div>
+
+    <div class="carousel__item">
+      <h4 class="teams__card-header">UX & TechCom</h4>
+      <p class="teams__card-content">UX Concepts · Research · UI Texts · Localization · Documentation</p>
+    </div>
+
+    <div class="carousel__item">
+      <h4 class="teams__card-header">Scrum</h4>
+      <p class="teams__card-content">Planning · Refinement · Review · Retro · Daily</p>
+    </div>
+
+  </div>
+
+  <div class="carousel__paginator">
+    <div class="prev"><i class="fas  fa-3x  fa-angle-left"></i></div>
+    <div class="next"><i class="fas  fa-3x  fa-angle-right"></i></div>
+  </div>
+
+</section>
+
 <section class="locations">
   <div id="map" class="locations__map"></div>
   <div class="locations__text"></div>
 </section>
 
+<link rel="stylesheet" href="/assets/slick/slick-theme.css"/>
+<link rel="stylesheet" href="/assets/slick/slick.css"/>
+<script src="/assets/js/jquery.magnific-popup.min.js"></script>
+<script src="/assets/slick/slick.min.js"></script>
+<script src="/assets/js/about.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
   type="text/javascript"></script>
 
