--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,7 +15,13 @@ header_image: private/about.jpg
 
 <section class="locations">
   <div id="map" class="locations__map"></div>
-  <div class="locations__text"></div>
+  <div class="locations__text-box">
+    <p class="locations__text">
+      Do you fancy to code us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
+      No matter where you live now, we'll help you to relocate and settle in.
+    </p>
+    <a href="https://epages.com/career" class="cta cta--beyond">Join the force!</a>
+  </div>
 </section>
 
 <script src="https://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
@@ -48,40 +54,40 @@ header_image: private/about.jpg
 
   var descriptions = {
     'Barcelona': '<div class="tooltip">' +
-                   '<div class="tooltip__image tooltip__image--barcelona"></div>' +
-                   '<div class="tooltip__text">' +
-                     '<h4>Barcelona</h4>' +
-                     '<p>ePages Southern Europe S.L.</p>' +
-                     '<p>Diagonal 435, 5º - 1ª</p>' +
-                     '<p>08036 Barcelona</p>' +
-                   '</div>' +
-                 '</div>',
+      '<div class="tooltip__image tooltip__image--barcelona"></div>' +
+      '<div class="tooltip__text">' +
+      '<h4>Barcelona</h4>' +
+      '<p>ePages Southern Europe S.L.</p>' +
+      '<p>Diagonal 435, 5º - 1ª</p>' +
+      '<p>08036 Barcelona</p>' +
+      '</div>' +
+      '</div>',
     'Jena': '<div class="tooltip">' +
-              '<div class="tooltip__image tooltip__image--jena"></div>' +
-              '<div class="tooltip__text">' +
-                '<h4>Jena</h4>' +
-                '<p>ePages GmbH</p>' +
-                '<p>Heinrich-Heine-Straße 1</p>' +
-                '<p>07743 Jena</p>' +
-              '</div>' +
-            '</div>',
+      '<div class="tooltip__image tooltip__image--jena"></div>' +
+      '<div class="tooltip__text">' +
+      '<h4>Jena</h4>' +
+      '<p>ePages GmbH</p>' +
+      '<p>Heinrich-Heine-Straße 1</p>' +
+      '<p>07743 Jena</p>' +
+      '</div>' +
+      '</div>',
     'Hamburg': '<div class="tooltip">' +
-                '<div class="tooltip__image tooltip__image--hamburg"></div>' +
-                '<div class="tooltip__text">' +
-                  '<h4>Hamburg</h4>' +
-                  '<p>ePages GmbH</p>' +
-                  '<p>Pilatuspool 2</p>' +
-                  '<p>20355 Hamburg</p>' +
-                '</div>' +
-              '</div>',
+      '<div class="tooltip__image tooltip__image--hamburg"></div>' +
+      '<div class="tooltip__text">' +
+      '<h4>Hamburg</h4>' +
+      '<p>ePages GmbH</p>' +
+      '<p>Pilatuspool 2</p>' +
+      '<p>20355 Hamburg</p>' +
+      '</div>' +
+      '</div>',
     'Bilbao': '<div class="tooltip">' +
-                '<div class="tooltip__image tooltip__image--bilbao"></div>' +
-                '<div class="tooltip__text">' +
-                  '<h4>Bilbao</h4>' +
-                  '<p>ePages Southern Europe S.L.</p>' +
-                  '<p>Remote work</p>' +
-                '</div>' +
-              '</div>',
+      '<div class="tooltip__image tooltip__image--bilbao"></div>' +
+      '<div class="tooltip__text">' +
+      '<h4>Bilbao</h4>' +
+      '<p>ePages Southern Europe S.L.</p>' +
+      '<p>Remote work</p>' +
+      '</div>' +
+      '</div>',
   };
 
   var map = new google.maps.Map(document.getElementById('map'), {
