--- a/_pages/about.html
+++ b/_pages/about.html
@@ -52,7 +52,7 @@ header_image: private/about.jpg
       Do you fancy to code us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
       No matter where you live now, we'll help you to relocate and settle in.
     </p>
-    <a href="https://epages.com/career" class="cta cta--beyond">Join the force!</a>
+    <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">Join the force!</a>
   </div>
 </section>
 
