--- a/_pages/about.html
+++ b/_pages/about.html
@@ -60,6 +60,6 @@ header_image: private/about.jpg
 <link rel="stylesheet" href="/assets/slick/slick-theme.css" />
 <link rel="stylesheet" href="/assets/slick/slick.css" />
 <script src="/assets/slick/slick.min.js"></script>
-<script src="https://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0&sensor=false"
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyCGIAu5RAopcJys8C-AvN1g4-sJM7jJGt0"
   type="text/javascript"></script>
 <script src="/assets/js/about.js"></script>
