Update: Add title to location section

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -46,10 +46,11 @@ header_image: private/about.jpg
 </section>
 
 <section class="locations">
+  <h2 class="section__title">Wanna code with us?</h2>
   <div id="map" class="locations__map"></div>
   <div class="locations__text-box">
     <p class="locations__text">
-      Do you fancy to code us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
+      Do you fancy to code with us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
       No matter where you live now, we'll help you to relocate and settle in.
     </p>
     <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">Join the force!</a>
