Chore: Image reorganization

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -2,7 +2,7 @@
 layout: about
 permalink: /about/
 title: About us
-header_image: public/map.jpg
+header_image: public/about.jpg
 ---
 
 <section class="introduction">
