New: Scaffold statistics area

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,15 +5,9 @@ title: About us
 header_image: public/about.jpg
 ---
 
-<section class="introduction">
-
-  <h1 class="section__title">We love ecommerce!</h1>
-
-  <p class="section__body">Our teams have one goal: Building excellent online shop software for our merchants.</p>
-
-</section>
-
 <section class="teams">
+  <h2 class="section__title">We love ecommerce!</h2>
+  <p class="section__body">Our teams have one goal: Building excellent online shop software for our merchants.</p>
   <div class="carousel js-carousel--about">
 
     <div class="carousel__item">
@@ -28,7 +22,7 @@ header_image: public/about.jpg
 
     <div class="carousel__item">
       <h4 class="teams__card-header">UX & TechCom</h4>
-      <p class="teams__card-content">UX Concepts · Research · UI Texts · Localization · Documentation</p>
+      <p class="teams__card-content">UX Concepts · Research ·<br />UI Texts · Localization · Docs</p>
     </div>
 
     <div class="carousel__item">
@@ -41,7 +35,7 @@ header_image: public/about.jpg
 </section>
 
 <section class="locations">
-  <h2 class="section__title">Wanna code with us?</h2>
+  <h2 class="section__title">{ Wanna code with us? }</h2>
   <div id="map" class="locations__map"></div>
   <div class="locations__text-box">
     <p class="locations__text">
@@ -52,6 +46,24 @@ header_image: public/about.jpg
   </div>
 </section>
 
+<section class="statistics">
+  <h2 class="section__title">Let's talk about numbers</h2>
+  <div class="card-wrapper">
+
+      <div class="card">
+
+      </div>
+
+      <div class="card">
+
+      </div>
+
+      <div class="card">
+        
+      </div>
+
+    </div>
+</section>
 
 <link rel="stylesheet" href="/assets/slick/slick-theme.css" />
 <link rel="stylesheet" href="/assets/slick/slick.css" />
