Chore: Remove whitespace

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -143,17 +143,11 @@ header_image: public/about.jpg
   <h2 class="section__title">Let's talk about numbers</h2>
   <div class="card-wrapper">
 
-      <div class="card">
+      <div class="card"></div>
 
-      </div>
+      <div class="card"></div>
 
-      <div class="card">
-
-      </div>
-
-      <div class="card">
-        
-      </div>
+      <div class="card"></div>
 
     </div>
 </section>
