Fix barcelona description

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -97,7 +97,7 @@ header_image: public/about.jpg
           {% assign author_data = site.data.authors | where:"id", "mmerino" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            Barcelona is one of the most important European cities in software development. It's great that I can live there, and at the same time work remotely with my team in Hamburg.
+            Barcelona is one of the most important European cities in software development. It's great that I can live here, and at the same time work remotely with my team in Hamburg.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
