Update: Add images to statistics area

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -130,14 +130,20 @@ header_image: public/about.jpg
 <section class="statistics">
   <h2 class="section__title">Let's talk about numbers</h2>
   <div class="card-wrapper">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="image-wrapper">
+      <img src="/assets/img/pages/about/morningbird.svg" />
+    </div>
+    <div class="image-wrapper">
+      <img src="/assets/img/pages/about/numbers.svg" />
+    </div>
+    <div class="image-wrapper">
+      <img src="/assets/img/pages/about/countries.svg" />
+    </div>
   </div>
 </section>
 
 <section class="locations">
-  <h2 class="section__title">{ Wanna code with us? }</h2>
+  <h2 class="section__title">Wanna code with us?</h2>
   <div id="map" class="locations__map"></div>
   <div class="locations__text-box">
     <p class="locations__text">
