Add Jena pictures

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -70,6 +70,9 @@ header_image: public/about.jpg
         <div class="js-city-slider">
           <div class="city__header" style="background-image: url('/assets/img/pages/about/jena.jpg')"></div>
           <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-2.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-3.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-4.jpg')"></div>
         </div>
 
         <div class="city__name">Jena</div>
