Chore: Update letter casing of subtitle

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ header_image: public/about.jpg
 
 <section class="teams">
   <h2 class="section__title">We love ecommerce!</h2>
-  <p class="section__body">Our teams have one goal: Building excellent online shop software for our merchants.</p>
+  <p class="section__body">Our teams have one goal: building excellent online shop software for our merchants.</p>
   <div class="carousel js-carousel--about">
 
     <div class="carousel__item">
