Add perl to dev-stak

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -17,7 +17,7 @@ header_image: public/about.jpg
 
     <div class="carousel__item">
       <h4 class="teams__card-header">Backend</h4>
-      <p class="teams__card-content">Java · Kotlin · Kubernetes · Helm · Spring · Ruby</p>
+      <p class="teams__card-content">Java · Kotlin · Kubernetes · Helm · Spring · Ruby · Perl</p>
     </div>
 
     <div class="carousel__item">
