--- a/_pages/about.html
+++ b/_pages/about.html
@@ -153,7 +153,7 @@ header_image: public/about.jpg
       Do you fancy to code with us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
       No matter where you live now, we'll help you to relocate and settle in.
     </p>
-    <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">Join the force!</a>
+    <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">Join the Force!</a>
   </div>
 </section>
 
