Update the section Get in touch with us

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -53,8 +53,8 @@ header_image: private/devjobs.jpg
       <div class="contact__group-1">
 
         <div class="contact__option">
-          <i class="fas  fa-envelope  fa-lg  fa-fw" aria-hidden="true"></i>
-          <a href="mailto:hr@epages.com">hr@epages.com</a>
+          <i class="fas  fa-info-circle  fa-lg  fa-fw" aria-hidden="true"></i>
+          <span>Serena Tansil</span>
         </div>
 
         <div class="contact__option">
@@ -63,20 +63,17 @@ header_image: private/devjobs.jpg
         </div>
 
         <div class="contact__option">
-          <i class="fab  fa-twitter  fa-lg  fa-fw" aria-hidden="true"></i>
-          <a href="https://twitter.com/epagesdevs" target="_blank">@epagesdevs</a>
-        </div>
-
-        <div class="contact__option">
-          <i class="fas  fa-rss  fa-lg  fa-fw" aria-hidden="true"></i>
-          <a href="/blog/" target="_blank">ePages DevBlog</a>
+          <i class="fas  fa-envelope  fa-lg  fa-fw" aria-hidden="true"></i>
+          <a href="mailto:hr@epages.com">hr@epages.com</a>
         </div>
 
       </div>
 
+      <img src="/assets/img/pages/jobs/serena-tansil.png" alt="Serena Tansil" class="contact-person image-serena">
+
     </div>
 
-
+    
     <div class="contact-wrapper--inner  contact-wrapper--right">
 
       <div class="contact__group-2">
@@ -98,7 +95,7 @@ header_image: private/devjobs.jpg
 
       </div>
 
-      <img src="/assets/img/pages/jobs/harm-behrens.png" alt="Harm Behrens | CTO" class="image-harm">
+      <img src="/assets/img/pages/jobs/harm-behrens.png" alt="Harm Behrens | CTO" class="contact-person image-harm">
 
     </div>
 
