Change Serena icon

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -53,8 +53,8 @@ header_image: private/devjobs.jpg
       <div class="contact__group-1">
 
         <div class="contact__option">
-          <i class="fas  fa-info-circle  fa-lg  fa-fw" aria-hidden="true"></i>
-          <span>Serena Tansil</span>
+          <i class="fas  fa-handshake  fa-lg  fa-fw" aria-hidden="true"></i>
+          <span>Serena Tansil | HR</span>
         </div>
 
         <div class="contact__option">
