--- a/_pages/about.html
+++ b/_pages/about.html
@@ -160,9 +160,5 @@ header_image: public/about.jpg
 <link rel="stylesheet" href="/assets/slick/slick-theme.css" />
 <link rel="stylesheet" href="/assets/slick/slick.css" />
 <script src="/assets/slick/slick.min.js"></script>
-{% if jekyll.environment == 'development' %}
-  <script src="https://maps.google.com/maps/api/js?key={{ site.development.google_api_key }}" type="text/javascript"></script>
-{% else %}
-  <script src="https://maps.google.com/maps/api/js?key={{ site.production.google_api_key }}" type="text/javascript"></script>
-{% endif %}  
+<script src="https://maps.google.com/maps/api/js?key={% if jekyll.environment == 'development' %}{{ site.development.google_api_key }}{% else %}{{ site.production.google_api_key }}{% endif %}" type="text/javascript"></script>
 <script src="/assets/js/about.js"></script>
