Generalize hr section on devjobs page

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -54,7 +54,7 @@ header_image: private/devjobs.jpg
 
         <div class="contact__option">
           <i class="fas  fa-handshake  fa-lg  fa-fw" aria-hidden="true"></i>
-          <span>Serena Tansil | HR</span>
+          <span>Human Resources</span>
         </div>
 
         <div class="contact__option">
@@ -68,9 +68,7 @@ header_image: private/devjobs.jpg
         </div>
 
       </div>
-
-      <img src="/assets/img/pages/jobs/serena-tansil.png" alt="Serena Tansil" class="contact-person image-serena">
-
+   
     </div>
 
 
