--- a/_pages/instagram.html
+++ b/_pages/instagram.html
@@ -14,15 +14,15 @@ title: instagram
 
   <a class="" href="https://epages.com/en/career/">ePages Career</a>
 
-  <a class="" href="https://epages.com/en/career/">Twitter @epages</a>
+  <a class="" href="https://twitter.com/epages">Twitter @epages</a>
 
   <br />
 
-  <a class="" href="https://epages.com/en/">Dev Blog</a>
+  <a class="" href="https://developer.epages.com/blog/">Dev Blog</a>
 
-  <a class="" href="https://epages.com/en/career/">Dev Jobs</a>
+  <a class="" href="https://developer.epages.com/devjobs/">Dev Jobs</a>
 
-  <a class="" href="https://epages.com/en/career/">Twitter @epagesdevs</a>
+  <a class="" href="https://twitter.com/epagesdevs/">Twitter @epagesdevs</a>
 
   <br />
 
