--- a/_pages/instagram.html
+++ b/_pages/instagram.html
@@ -1,7 +1,7 @@
 ---
 layout: white
 permalink: /instagram/
-title: instagram
+title: Instagram
 ---
 
 <div class="link-collection">
@@ -10,44 +10,22 @@ title: instagram
 
   <p>@life_at_epages</p>
 
-  <a class="" href="https://epages.com/en/">ePages Home</a>
+  <a href="https://epages.com/en/">ePages Home</a>
 
-  <a class="" href="https://epages.com/en/career/">ePages Career</a>
+  <a href="https://epages.com/en/career/">ePages Career</a>
 
-  <a class="" href="https://twitter.com/epages">Twitter @epages</a>
-
-  <br />
-
-  <a class="" href="https://developer.epages.com/blog/">Dev Blog</a>
-
-  <a class="" href="https://developer.epages.com/devjobs/">Dev Jobs</a>
-
-  <a class="" href="https://twitter.com/epagesdevs/">Twitter @epagesdevs</a>
+  <a href="https://twitter.com/epages">Twitter @epages</a>
 
   <br />
 
-  <a class="" href="https://epages.com/en/legal-notice/">Legal Notice</a>
+  <a href="https://developer.epages.com/blog/">Dev Blog</a>
+
+  <a href="https://developer.epages.com/devjobs/">Dev Jobs</a>
+
+  <a href="https://twitter.com/epagesdevs/">Twitter @epagesdevs</a>
+
+  <br />
+
+  <a href="https://epages.com/en/legal-notice/">Legal Notice</a>
 
 </div>
-
-
-
-<!--
-
-Life at epages logo, see attached logo
-
-Username: @life_at_epages
-
-
-
-Add space between these two sections
-
-
-
-Button color code: epagesdevs red, see attached color code
-
-Button: add hover effect like https://epages.com/de/instagram/
-
-URL: www.developer.epages.com/instagram
-
--->
