--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,7 +11,7 @@ title: The next generation<br>ecommerce infrastructure
 
   <p class="section__body">We've developed a highly flexible and extensible ecommerce API.</p>
 
-  <a class="cta  cta--beyond" href="http://docs.beyondshop.cloud/" target="_blank" onClick="ga('send', 'event', 'Docs', 'click', 'Check Beyond Docs');">Check it out!</a>
+  <a class="cta  cta--beyond" href="http://docs.beyondshop.cloud/" target="_blank" onClick="ga('send', 'event', 'Docs', 'click', 'Check Beyond Docs');">Check it out!</a>
 
   <div class="card  column-wrapper">
 
