--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -30,7 +30,7 @@ header_image: private/devjobs.jpg
 
   </div>
 
-  <a href="https://epages.com/career" class="cta  cta--beyond">Show all open positions</a>
+  <a href="https://epages.com/career" class="cta  cta--beyond">View all jobs</a>
 
 </section>
 
