Make remote javascript files locale.
Math events, menu and zoom are needed for math jax

--- a/_pages/instagram.html
+++ b/_pages/instagram.html
@@ -46,7 +46,7 @@ title: Instagram
 
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 
 <script>
   var width = $('.button').width();
