--- a/_pages/about.html
+++ b/_pages/about.html
@@ -37,7 +37,7 @@ header_image: public/about.jpg
 <section>
   <h2 class="section__title">International. Interdisciplinary. Connected.</h2>
 
-  <p class="section__body">Our ePagees are spread over these locations:</p>
+  <p class="section__body">These are our four offices where we come together:</p>
 
   <div class="card">
 
