Add first update regarding the Barcelona pictures

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -88,7 +88,8 @@ header_image: public/about.jpg
 
       <div class="city">
         <div class="js-city-slider">
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona-1-1.jpeg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona-2-1.jpeg')"></div>
         </div>
 
         <div class="city__name">Barcelona</div>
