Apply suggested changes.

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -56,7 +56,7 @@ header_image: public/about.jpg
           {% assign author_data = site.data.authors | where:"id", "ppriotto" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            What I like most about working at ePages is the multicultural environment, and that we have a high representation of women in tech.
+            My favorite thing about working at ePages is the multicultural environment and that we have a high representation of women in tech.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
@@ -120,7 +120,7 @@ header_image: public/about.jpg
           {% assign author_data = site.data.authors | where:"id", "uabrisketa" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            What I like most about working at ePages is the freedom to make decisions and the trust that ePages has in us.
+            One of the things I like most about working at ePages is the freedom to make decisions and the trust that ePages has in us.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
@@ -151,7 +151,7 @@ header_image: public/about.jpg
   <div id="map" class="locations__map"></div>
   <div class="locations__text-box">
     <p class="locations__text">
-      Do you fancy to code with us, drink a coffee (or two), play table soccer or have a yoga class together?
+      Do you fancy to code with us, have a coffee (or two), play foosball or have a good chat?
     </p>
     <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">JOIN THE FORCE!</a>
   </div>
