Update "About" page for the DevPortal (#764)
* Update "About"-page for the DevPortal

* Change wording

* Add first update regarding the Barcelona pictures

* Apply suggested changes.

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -37,7 +37,7 @@ header_image: public/about.jpg
 <section>
   <h2 class="section__title">International. Interdisciplinary. Connected.</h2>
 
-  <p class="section__body">More than 100 creative minds are spread over these locations:</p>
+  <p class="section__body">These are our four offices where we come together:</p>
 
   <div class="card">
 
@@ -45,11 +45,9 @@ header_image: public/about.jpg
 
       <div class="city">
         <div class="js-city-slider">
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-1.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-2.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-3.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-4.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-1-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-2-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/hamburg-3-1.jpg')"></div>
         </div>
 
         <div class="city__name">Hamburg</div>
@@ -58,7 +56,7 @@ header_image: public/about.jpg
           {% assign author_data = site.data.authors | where:"id", "ppriotto" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            What I like most about working at ePages is the multicultural environment, and that we have a high representation of women in tech.
+            My favorite thing about working at ePages is the multicultural environment and that we have a high representation of women in tech.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
@@ -68,20 +66,19 @@ header_image: public/about.jpg
 
       <div class="city">
         <div class="js-city-slider">
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-1.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-2.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-3.jpg')"></div>
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-4.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-1-1.png')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-2-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-3-1.png')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/jena-5-1.png')"></div>
         </div>
 
         <div class="city__name">Jena</div>
 
         <div class="quote">
-          {% assign author_data = site.data.authors | where:"id", "fgehring" | first %}
+          {% assign author_data = site.data.authors | where:"id", "mkofler" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            Here at ePages I enjoy working in a dynamic team. We even cook together once or twice a week.
+            What I like most about ePages and especially about the location in Jena is the very warm and familiar working atmosphere here and the fact that I was totally free in shaping my work from the very beginning.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
@@ -91,7 +88,8 @@ header_image: public/about.jpg
 
       <div class="city">
         <div class="js-city-slider">
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona-1-1.jpeg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/barcelona-2-1.jpeg')"></div>
         </div>
 
         <div class="city__name">Barcelona</div>
@@ -110,7 +108,10 @@ header_image: public/about.jpg
 
       <div class="city">
         <div class="js-city-slider">
-          <div class="city__header" style="background-image: url('/assets/img/pages/about/bilbao.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/bilbao-1-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/bilbao-2-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/bilbao-3-1.jpg')"></div>
+          <div class="city__header" style="background-image: url('/assets/img/pages/about/bilbao-4-1.jpg')"></div>
         </div>
 
         <div class="city__name">Bilbao</div>
@@ -119,7 +120,7 @@ header_image: public/about.jpg
           {% assign author_data = site.data.authors | where:"id", "uabrisketa" | first %}
           <img class="quote__image" src="/assets/img/pages/blog/authors/{{ author_data.image }}" />
           <div class="quote__text">
-            I'm thankful that after 1 1/2 years in Hamburg, ePages gave me the chance to return to my hometown Bilbao to work remotely.
+            One of the things I like most about working at ePages is the freedom to make decisions and the trust that ePages has in us.
             <span class="quote__author">{{ author_data.name }}</span>
             <i class="quote__icon quote__icon--left fas fa-quote-left"></i>
             <i class="quote__icon quote__icon--right fas fa-quote-right"></i>
@@ -150,10 +151,9 @@ header_image: public/about.jpg
   <div id="map" class="locations__map"></div>
   <div class="locations__text-box">
     <p class="locations__text">
-      Do you fancy to code with us, drink a coffee (or two), play table soccer or have a yoga class together?<br />
-      No matter where you live now, we'll help you to relocate and settle in.
+      Do you fancy to code with us, have a coffee (or two), play foosball or have a good chat?
     </p>
-    <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">Join the Force!</a>
+    <a href="https://developer.epages.com/devjobs" class="cta cta--beyond">JOIN THE FORCE!</a>
   </div>
 </section>
 
